--- a/What I spend my time on.ipynb
+++ b/What I spend my time on.ipynb
@@ -16,11 +16,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Action</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Impression/Follow up task</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>08:30</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>Tidy Kitchen</td>\n",
+       "      <td>Put away some dishes, loaded the washer</td>\n",
+       "      <td>Small task, not huge impact, daily thing</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>09:40</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>Water Plants</td>\n",
+       "      <td>Looked at the outdoor plants, no need to water</td>\n",
+       "      <td>Refreshing, plants need water later today</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>10:00</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>Learn Python</td>\n",
+       "      <td>Learned about pandas dataframes and plotted so...</td>\n",
+       "      <td>would like to make an actual use case</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>12:00</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>Workout</td>\n",
+       "      <td>Weighted pull up eccentrics mainly</td>\n",
+       "      <td>new pr! 37lbs for 8 slow reps</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>13:30</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>Video Editing</td>\n",
+       "      <td>Worked on the plant timelapse video</td>\n",
+       "      <td>not as interesting as expected</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>18:00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>Walk</td>\n",
+       "      <td>Walked 3km with Ashley</td>\n",
+       "      <td>knee felt good.</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>24/08/2021</td>\n",
+       "      <td>19:00</td>\n",
+       "      <td>3.50</td>\n",
+       "      <td>Watch TV</td>\n",
+       "      <td>Youtube + watched Seven Psychopaths with Ashley</td>\n",
+       "      <td>Ashley wants to do more in our evenings now</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>25/08/2021</td>\n",
+       "      <td>07:30</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>Stretching</td>\n",
+       "      <td>Did stretches and mobility as a warm up for th...</td>\n",
+       "      <td>Felt good. Need to start with this</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>25/08/2021</td>\n",
+       "      <td>08:00</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>Tidy Kitchen</td>\n",
+       "      <td>Emptied sink and wiped counters, cleaned frenc...</td>\n",
+       "      <td>Keep the momentum going</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>25/08/2021</td>\n",
+       "      <td>09:30</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>Study ML</td>\n",
+       "      <td>Only did two small lessons-</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date   Time  Duration         Action  \\\n",
+       "0  24/08/2021  08:30      0.25   Tidy Kitchen   \n",
+       "1  24/08/2021  09:40      0.25   Water Plants   \n",
+       "2  24/08/2021  10:00      1.50   Learn Python   \n",
+       "3  24/08/2021  12:00      0.75        Workout   \n",
+       "4  24/08/2021  13:30      1.50  Video Editing   \n",
+       "5  24/08/2021  18:00      1.00           Walk   \n",
+       "6  24/08/2021  19:00      3.50       Watch TV   \n",
+       "7  25/08/2021  07:30      0.25     Stretching   \n",
+       "8  25/08/2021  08:00      0.50   Tidy Kitchen   \n",
+       "9  25/08/2021  09:30      0.50       Study ML   \n",
+       "\n",
+       "                                         Description  \\\n",
+       "0            Put away some dishes, loaded the washer   \n",
+       "1     Looked at the outdoor plants, no need to water   \n",
+       "2  Learned about pandas dataframes and plotted so...   \n",
+       "3                 Weighted pull up eccentrics mainly   \n",
+       "4                Worked on the plant timelapse video   \n",
+       "5                             Walked 3km with Ashley   \n",
+       "6    Youtube + watched Seven Psychopaths with Ashley   \n",
+       "7  Did stretches and mobility as a warm up for th...   \n",
+       "8  Emptied sink and wiped counters, cleaned frenc...   \n",
+       "9                        Only did two small lessons-   \n",
+       "\n",
+       "                     Impression/Follow up task  \n",
+       "0    Small task, not huge impact, daily thing   \n",
+       "1    Refreshing, plants need water later today  \n",
+       "2        would like to make an actual use case  \n",
+       "3                new pr! 37lbs for 8 slow reps  \n",
+       "4              not as interesting as expected   \n",
+       "5                              knee felt good.  \n",
+       "6  Ashley wants to do more in our evenings now  \n",
+       "7          Felt good. Need to start with this   \n",
+       "8                     Keep the momentum going   \n",
+       "9                                          NaN  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy\n",
     "import pandas as pd\n",
